# Spec-Driven-Development-Hackathons

hackathon-II/hackathon-todo-phase1/: CLAUDE.md  README.md  SUBMISSION.md  main.py  pyproject.toml
hackathon-II/hackathon-todo-phase1/.claude/: settings.local.json
hackathon-II/hackathon-todo-phase1/.specify/memory/: constitution.md
hackathon-II/hackathon-todo-phase1/history/prompts/1-todo-app/: 1-create-todo-spec.spec.prompt.md
hackathon-II/hackathon-todo-phase1/history/prompts/constitution/: 1-create-python-todo-constitution.constitution.prompt.md
hackathon-II/hackathon-todo-phase1/history/prompts/general/: 2-create-todo-spec-general.spec.prompt.md  3-create-todo-plan.plan.prompt.md  4-create-todo-tasks.tasks.prompt.md  5-complete-todo-implementation.tasks.prompt.md
hackathon-II/hackathon-todo-phase1/specs/1-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
hackathon-II/hackathon-todo-phase1/specs/1-todo-app/checklists/: requirements.md
hackathon-II/hackathon-todo-phase1/src/: __init__.py
hackathon-II/hackathon-todo-phase1/src/cli/: __init__.py  interface.py
hackathon-II/hackathon-todo-phase1/src/managers/: __init__.py  task_manager.py
hackathon-II/hackathon-todo-phase1/src/models/: __init__.py  task.py
hackathon-II/hackathon-todo-phase1/src/storage/: __init__.py  task_storage.py
hackathon-II/hackathon-todo-phase2/backend/: .env.example  API_TESTING.md  auth.py  db.py  init_db.py  main.py  migrate_add_fields.py  models.py  pyproject.toml  requirements.txt  schemas.py
hackathon-II/hackathon-todo-phase2/backend/routes/: auth.py  tasks.py
(+152 files in other folders)
